# llmfit

./: CHANGELOG.md  Cargo.toml  MODELS.md  README.md  README.zh.md  install.sh
.github/workflows/: docker.yml
llmfit-core/: Cargo.toml
llmfit-core/src/: fit.rs  hardware.rs  lib.rs  models.rs  plan.rs  providers.rs  update.rs
llmfit-tui/src/: main.rs  serve_api.rs  tui_app.rs  tui_events.rs  tui_ui.rs
scripts/: scrape_hf_models.py
src/: providers.rs  tui_app.rs  tui_ui.rs
